bug/116 - fix tooltips cut off on lessons

--- a/src/assets/scss/_components/_classes.scss
+++ b/src/assets/scss/_components/_classes.scss
@@ -692,6 +692,7 @@
     //=== Lessons
     .lessons__list{
         max-height:none;
+        overflow: visible;
         .heading{
             .wrapper__inner{
                 padding:0 4px;
